Fixed not existing gap in dish cards

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,6 +134,7 @@ button:hover{
     max-width: 600px;
     min-width: 300px;
     padding: 20px;
+    gap: 20px;
     border-radius: 10px;
     font-size: 1.3em;
     box-shadow: 2px 2px 10px;
